cargo-features = ["edition"]

[package]
name = "bar-config"
version = "0.1.0"
authors = ["Christian Duerr <contact@christianduerr.com>"]
edition = '2018'

[dependencies]
serde_yaml = { version = "0.8.1", optional = true }
serde_json = { version = "1.0.26", optional = true }
toml = { version = "0.4.6", optional = true }
serde_derive = "1.0.75"
serde = "1.0.75"

[dev-dependencies]
tempfile = "3.0.3"

[features]
default = ["serde_yaml"]
json-fmt = ["serde_json"]
toml-fmt = ["toml"]
