cargo-features = ["edition"]

[package]
name = "bar-config"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["Christian Duerr <contact@christianduerr.com>"]
edition = '2018'
repository = "https://github.com/chrisduerr/bar-config"
documentation = "https://docs.rs/bar-config"
description = "Crate for easily creating system bars/panels/docks."
keywords = ["bar", "panel", "dock", "customization", "linux"]
categories = ["config", "encoding", "parser-implementations"]

[dependencies]
serde_yaml = { version = "0.8.1", optional = true }
serde_json = { version = "1.0.26", optional = true }
toml = { version = "0.4.6", optional = true }
serde_derive = "1.0.75"
serde = "1.0.75"
tokio = "0.1.8"
time = "0.1.40"
dirs = "1.0.3"

[features]
default = ["serde_yaml"]
json-fmt = ["serde_json"]
toml-fmt = ["toml"]
